# blogapi

./: pyproject.toml  requirements.txt  schema.yml
accounts/: admin.py  forms.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
posts/: models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
